<resources>
    <string name="app_name">LinearLayout30032020</string>
    <!--    activity_linearLayout1-->
    <string name="layout_linearText1">A</string>
    <string name="layout_linearText2">B</string>
    <string name="layout_linearText3">C</string>
    <string name="layout_linearText4">D</string>
    <string name="layout_linearText5">A</string>
    <string name="layout_linearText6">B</string>
    <string name="layout_linearText7">C</string>
    <string name="layout_linearText8">D</string>

    <!--    activity_linearLayout2-->
    <string name="layout_linearText9">1</string>
    <string name="layout_linearText10">2</string>
    <string name="layout_linearText11">3</string>
    <string name="layout_linearText12">4</string>
    <string name="layout_linearText13">5</string>

    <!--    activity_linearLayout3-->
    <string name="layout_linearText14">1</string>
    <string name="layout_linearText15">2</string>
    <string name="layout_linearText16">3</string>
    <string name="layout_linearText17">4</string>
    <string name="layout_linearText18">5</string>
    <string name="layout_linearText19">6</string>
    <string name="layout_linearText20">7</string>

    <!--    activity_linearLayout4-->
    <string name="layout_linearText21">1</string>
    <string name="layout_linearText22">2</string>
    <string name="layout_linearText23">3</string>
    <string name="layout_linearText24">4</string>
    <string name="layout_linearText25">5</string>
    <string name="layout_linearText26">6</string>
    <string name="layout_linearText27">7</string>
    <string name="layout_linearText28">8</string>
    <string name="layout_linearText29">9</string>

</resources>
